--- a/app/assets/stylesheets/partials/abstractions/_frame.scss
+++ b/app/assets/stylesheets/partials/abstractions/_frame.scss
@@ -3,24 +3,24 @@
    ====================================================================================== */
 
 /*
-	Usage: 
+	Usage:
 		Apply a nice framed effect typically to the `img` and `figure` elements.
-	
+
 	Demo:
 		Style Guide -> Abstractions -> Frame
 */
 
 .frame {
 	background-color: #fff;
-	padding: to-em($spacing-quarter);
-    border-radius: $border-radius;
-    border-bottom: 1px solid $color-grey-light;
-	box-shadow: 0 1px 4px rgba(#000, 0.35);
+	@include to-rem(padding, $spacing-quarter);
+  border-radius: $border-radius;
+  border-bottom: 1px solid $color-grey-1;
+	box-shadow: $box-shadow;
 	display: block;
-	
+
 	/* Old IE */
 	@include old-ie {
-		border: 1px solid $color-grey-lightest;
+		border: 1px solid $color-grey-1;
 		border-bottom-width: 2px;
 	}
 }
@@ -30,9 +30,8 @@
 
 	/* Caption */
 	.frame__caption {
-		padding: to-em($spacing-quarter);
+		@include to-rem(padding, $spacing-quarter);
 		font-family: $font-family-quote;
 		font-style: italic;
-		color: $color-grey;
 		text-align: center;
 	}
