--- a/app/assets/stylesheets/partials/abstractions/_spacing.scss
+++ b/app/assets/stylesheets/partials/abstractions/_spacing.scss
@@ -12,7 +12,5 @@
 
 .spacing {@extend %mrg-base;}
 
-/* --Extenders-- */
-
-/* Double spacing */
+/* Extend: double spacing */
 .spacing--dbl {@include to-rem(margin-bottom, $spacing-dbl);}
