--- a/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
+++ b/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
@@ -18,7 +18,7 @@
 	.no-js & {display: block !important;}
 }
 
-/* --Toggle button container-- */
+/* --Extenders-- */
 
 /* Center align */
 .toggle-content--btn-center {text-align: center;}
