--- a/app/assets/stylesheets/partials/base/_headings.scss
+++ b/app/assets/stylesheets/partials/base/_headings.scss
@@ -19,5 +19,5 @@
 h1, .h1 {
   font-family: $font-family-lato;
   font-weight: 300;
-  margin-top: 0; /* Note: this is needed to turn off the top margin set in 'utils/normalize'. */
+  margin-top: 0; /* Note: this is needed to turn off the top margin set in 'utils/normalize' */
 }
