--- a/app/assets/stylesheets/partials/base/_skip-link.scss
+++ b/app/assets/stylesheets/partials/base/_skip-link.scss
@@ -11,7 +11,7 @@
 */
 
 .hide-visually.skip-link {
-	/* Pseudo classes */
+	/* Active and focus states */
 	&:active,
 	&:focus {
 		position: absolute;
