--- a/app/assets/stylesheets/partials/buttons/_faux-link.scss
+++ b/app/assets/stylesheets/partials/buttons/_faux-link.scss
@@ -17,7 +17,7 @@
 .btn--faux-link {
 	color: $color-link;
 
-	/* Pseudo classes */
+	/* Hover and focus states */
 	&:hover,
 	&:focus {color: $color-link-hover;}
 }
