--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -354,7 +354,7 @@
       &,
       a {color: $color-grey-1;}
 
-      /* Hover/focus state */
+      /* Hover and focus states */
       a:hover,
       a:focus {color: $color-light-txt;}
 
