--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -232,7 +232,7 @@
         width: auto;
       }
 
-      /* Hover/focus states */
+      /* Hover and focus states */
       &:hover,
       &:focus {
         &,
