--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -144,16 +144,16 @@
 .icon--switch-horizontal-full:before {content: "\e035";}
 
 /* Ellipses horizontal */
-.icon-ellipsis-horizontal:before {content: "\f141";}
+.icon--ellipsis-horizontal:before {content: "\f141";}
 
 /* Ellipses vertical */
-.icon-ellipsis-vertical:before {content: "\f142";}
+.icon--ellipsis-vertical:before {content: "\f142";}
 
 /* Plus */
-.icon-plus:before {content: "\f067";}
+.icon--plus:before {content: "\f067";}
 
 /* Back to top */
-.icon-back-to-top:before {content: "\e031";}
+.icon--back-to-top:before {content: "\e031";}
 
 /* PDF */
 .icon--pdf:before {content: "\e033";}
