--- a/app/assets/stylesheets/partials/modules/_map-google-static.scss
+++ b/app/assets/stylesheets/partials/modules/_map-google-static.scss
@@ -4,10 +4,10 @@
 
 /*
   Usage:
-    Static Google map.
+    Renders a static Google map.
 
   Note:
-    Hides the Google static map image. It gets applied as a background image (but done via style block on the page)
+    Hides the Google static map image as it gets applied as a background image (but done via `style` block on the page).
 
   Demo:
     Style Guide -> Modules -> Google Map Static
@@ -20,19 +20,21 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
 
-  /* High res */
-  @media  (-o-min-device-pixel-ratio: 5/4),
-          (-webkit-min-device-pixel-ratio: 1.25),
-          (min-resolution: 120dpi) {
-            background-size: 980px 280px;
-          }
+  /* High res image */
+  @media (-o-min-device-pixel-ratio: 5/4),
+         (-webkit-min-device-pixel-ratio: 1.25),
+         (min-resolution: 120dpi) {
+          background-size: 980px 280px;
+        }
 
-  /* Hide image so we can use a bg img instead to maintain scale, see: http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html */
+  /* Hide image so we can use a bg img instead to maintain scale */
   img {
     @include opacity(0);
     @include to-rem(height, 280);
 
     /* Print */
-    @media print {opacity: 1;}
+    @media print {
+      opacity: 1;
+    }
   }
 }
