--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -109,9 +109,7 @@
       }
     }
 
-/* --Extenders-- */
-
-/* Dark color */
+/* Extend: dark color */
 .nav-contextual--dark {
 
   /* Highlight parent item (`li`) for when hover drop downs are in view and apply link hover/focus/active states */
