--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -56,7 +56,5 @@
     p > span {color: $color-dark-txt;}
 }
 
-/* --Extenders-- */
-
-/* Remove top padding */
+/* Extend: remove top padding */
 .no-content-fallback-msg--flush {padding-top: 0;}
