--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -4,10 +4,7 @@
 
 /*
   Usage:
-    Renders a tile, which is to be used in pin board style layout
-
-  Note:
-    This module is to be used with isotope. See: http://isotope.metafizzy.co
+    Renders a tile for different types of content e.g. a 'Product', 'Deal', 'Event', etc. Mainly used in pin board module.
 
   Demo:
     Style Guide -> Modules -> Tile
