--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -129,7 +129,7 @@
   <%# Footer %>
   <footer class="national__footer" role="contentinfo">
     <div class="container">
-      <ul class="national__footer__nav horiz-list--slash">
+      <ul class="national__footer__nav horiz-list horiz-list--slash">
         <li>
           <%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external', target: '_blank' %>
         </li>
@@ -157,7 +157,7 @@
       </ul>
 
       <nav role="navigation" class="national__footer__nav">
-        <ul class="horiz-list--slash">
+        <ul class="horiz-list horiz-list--slash">
           <li>
             <small>&copy; Westfield <%= Time.now.year %></small>
           </li>
