--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -21,7 +21,7 @@
     <%# //Store location %>
 
     <%# Contact store %>
-    <div class="island island--fill island--center islet-tops">
+    <div class="island island--fill island--center islet-ends">
       <span class="hide-fully--non-palm">
         <%= phone_link @store.phone_number, class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
           <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @store.name %></strong>
