--- a/app/assets/stylesheets/partials/abstractions/_complex-link.scss
+++ b/app/assets/stylesheets/partials/abstractions/_complex-link.scss
@@ -9,29 +9,25 @@
 */
 
 /*
-	Note: 
+	Note:
 		The base link styles are repeated here so not very DRY (need to look into this).
-	Credit: 
+	Credit:
 		http://github.com/necolas/suit-utils/blob/master/link.css#L18
 */
 
 .complex-link {
 	@extend %disguised-link;
-	
+
 	/* Pseudo classes for link target */
-	&:visited .complex-link__target {color: lighten($color-link, 10%);}
-	
+	&:visited .complex-link__target {color: $color-link-visited;}
+
 	&:hover .complex-link__target,
-	&:focus .complex-link__target {
-		color: complement($color-link);
-		text-decoration: none; /* Note: this may be redundant? */
-	}
+	&:focus .complex-link__target {color: $color-link-hover;}
 }
 
 	/* Link target */
 	.complex-link__target {
 		color: $color-link;
-		text-decoration: underline; /* Note: this may be redundant? */
 		cursor: pointer;
 		@extend %transition-subtle;
 	}
