--- a/app/assets/stylesheets/partials/abstractions/_drop-down.scss
+++ b/app/assets/stylesheets/partials/abstractions/_drop-down.scss
@@ -1,10 +1,10 @@
 /* ======================================================================================
-   @MODULES -> ABSTRACTIONS -> DROP DOWN
+   @ABSTRACTIONS -> DROP DOWN
    ====================================================================================== */
 
 /*
 	Usage:
-		A generic drop down powered by 'Angular Toggle Visibility Directive'.
+		A generic drop down powered by 'Angular Toggle Visibility Directive' and a version for `:hover`.
 
 	Demo:
 		Style Guide -> Abstractions -> Drop Down
