--- a/app/assets/stylesheets/partials/base/_viewport.scss
+++ b/app/assets/stylesheets/partials/base/_viewport.scss
@@ -2,8 +2,8 @@
    @BASE -> VIEWPORT
    ====================================================================================== */
 
-/* 
-	Note: add @viewport rule to future proof (remove if site isn't responsive), leave out `-ms-` prefix, see here: http://nostrongbeliefs.com/why-i-think-we-shouldnt-use-css-viewport-in-ie10-for-now/. 
+/*
+	Note: add @viewport rule to future proof, leave out `-ms-` prefix, see here: http://nostrongbeliefs.com/why-i-think-we-shouldnt-use-css-viewport-in-ie10-for-now/.
 */
 
 @-webkit-viewport {width: device-width;}
