--- a/app/assets/stylesheets/partials/modules/_img-rotate.scss
+++ b/app/assets/stylesheets/partials/modules/_img-rotate.scss
@@ -4,16 +4,16 @@
 
 /*
   Usage:
-    Creates a set of rotating images
+    Creates a set of rotating images.
 
   Notes:
-    Need to `@include img-rotate` mixin to generate the specific image rotate classes that's based on the number of images it's rotating
+    Need to `@include img-rotate` mixin to generate the specific image rotate classes that's based on the number of images it's rotating.
 
   Credit:
     https://github.com/benschwarz/gallery-css
 
   Demo:
-    Style Guide -> Modules -> IMAGE ROTATE
+    Style Guide -> Modules -> Image Rotate
 */
 
 .img-rotate {position: relative;}
@@ -27,11 +27,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 0;
-    /* IE8 will just ignore this rule so will always show the image */
+    /* Old IE will just ignore this rule so will always show the image */
     opacity: 0;
 
-    /* IE8 will just ignore this rule */
+    /* Old IE will just ignore this rule */
     &:first-of-type {opacity: 1;}
   }
 
-// @include img-rotate($item-count: 2, $display-duration: 8, $transition-duration: 2);
+//@include img-rotate($item-count: 2, $display-duration: 8, $transition-duration: 2);
