--- a/app/assets/stylesheets/partials/modules/_promo-tile.scss
+++ b/app/assets/stylesheets/partials/modules/_promo-tile.scss
@@ -4,7 +4,7 @@
 
 /*
   Usage:
-    Special tile design with specific icon centred in the middle
+    Special tile design with specific icon centred in the middle, typically used on the sub pages e.g. 'Centre Services'.
 
   Demo:
     Style Guide -> Modules -> Promo Tile
@@ -13,6 +13,7 @@
 .promo-tile {
   text-align: center;
 
+  /* Global rules */
   img {border-bottom: 1px solid $color-grey-1;}
 
   p {@include to-rem(margin-bottom, $spacing-half);}
@@ -23,6 +24,7 @@
     @include font-size($font-size-lrg);
     @include to-rem(margin-bottom, $spacing-quarter);
 
+    /* Increase font size at this breakpoint */
     @include respond-min($non-palm) {
       @include font-size(18);
     }
@@ -37,6 +39,7 @@
     border-radius: 100%;
     border: 1px solid $color-grey-1;
 
+    /* Increase padding, font size and negative top margin at this breakpoint */
     @include respond-min($non-palm) {
       @include to-rem(padding, $spacing-half);
       @include font-size(36, 1);
