--- a/app/assets/stylesheets/partials/modules/_tags.scss
+++ b/app/assets/stylesheets/partials/modules/_tags.scss
@@ -28,7 +28,7 @@
     border-radius: $border-radius;
     @include to-rem(max-width, 120);
 
-    /* Hover/focus states */
+    /* Hover and focus states */
     &:hover,
     &:focus {
       border-color: $color-link-hover;
