--- a/app/assets/stylesheets/partials/utils/_mixins.scss
+++ b/app/assets/stylesheets/partials/utils/_mixins.scss
@@ -810,10 +810,10 @@
 */
 
 @mixin target-iOS {
-	@media 	only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape),
-					only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait),
-					only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape),
-					only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+	@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape),
+				 only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait),
+				 only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape),
+				 only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
 						@content;
 					}
 }
@@ -836,9 +836,9 @@
 */
 
 @mixin img-2x($image, $width, $height, $sledgehammer: "") {
-	@media 	(-o-min-device-pixel-ratio: 5/4),
-					(-webkit-min-device-pixel-ratio: 1.25),
-					(min-resolution: 120dpi) {
+	@media (-o-min-device-pixel-ratio: 5/4),
+				 (-webkit-min-device-pixel-ratio: 1.25),
+				 (min-resolution: 120dpi) {
 						background-image: cloudinary-url($image)#{$sledgehammer};
 						background-size: $width $height#{$sledgehammer};
 	}
@@ -860,93 +860,97 @@
 
 @mixin arrow($arrow-edge, $arrow-location, $arrow-color, $border-color: $arrow-color) {
 
-    @if $arrow-edge == top {
+  /* Top */
+  @if $arrow-edge == top {
 
-        @extend %arrow--top;
+    @extend %arrow--top;
 
-        &:before {border-bottom-color: $border-color !important;}
+    &:before {border-bottom-color: $border-color !important;}
 
-        &:after {border-bottom-color: $arrow-color !important;}
+    &:after {border-bottom-color: $arrow-color !important;}
 
-        @if $arrow-location == left {
-            @extend %arrow--left;
-        }
-
-        @if $arrow-location == center {
-            @extend %arrow--center;
-        }
-
-        @if $arrow-location == right {
-            @extend %arrow--right;
-        }
-
+    @if $arrow-location == left {
+      @extend %arrow--left;
     }
 
-    @if $arrow-edge == right {
-
-        @extend %arrow--far;
-
-        &:before {border-left-color: $border-color !important;}
-
-        &:after {border-left-color: $arrow-color !important;}
-
-        @if $arrow-location == top {
-            @extend %arrow--upper;
-        }
-
-        @if $arrow-location == center {
-            @extend %arrow--middle;
-        }
-
-        @if $arrow-location == bottom {
-            @extend %arrow--lower;
-        }
-
+    @if $arrow-location == center {
+      @extend %arrow--center;
     }
 
-    @if $arrow-edge == bottom {
-
-        @extend %arrow--bottom;
-
-        &:before {border-top-color: $border-color !important;}
-
-        &:after {border-top-color: $arrow-color !important;}
-
-        @if $arrow-location == left {
-            @extend %arrow--left;
-        }
-
-        @if $arrow-location == center {
-            @extend %arrow--center;
-        }
-
-        @if $arrow-location == right {
-            @extend %arrow--right;
-        }
-
+    @if $arrow-location == right {
+      @extend %arrow--right;
     }
 
-    @if $arrow-edge == left {
+  }
 
-        @extend %arrow--near;
+  /* Right */
+  @if $arrow-edge == right {
 
-        &:before {border-right-color: $border-color !important;}
+    @extend %arrow--far;
 
-        &:after {border-right-color: $arrow-color !important;}
+    &:before {border-left-color: $border-color !important;}
 
-        @if $arrow-location == top {
-            @extend %arrow--upper;
-        }
+    &:after {border-left-color: $arrow-color !important;}
 
-        @if $arrow-location == center {
-            @extend %arrow--middle;
-        }
-
-        @if $arrow-location == bottom {
-            @extend %arrow--lower;
-        }
-
+    @if $arrow-location == top {
+      @extend %arrow--upper;
     }
+
+    @if $arrow-location == center {
+       @extend %arrow--middle;
+    }
+
+    @if $arrow-location == bottom {
+      @extend %arrow--lower;
+    }
+
+  }
+
+  /* Bottom */
+  @if $arrow-edge == bottom {
+
+    @extend %arrow--bottom;
+
+    &:before {border-top-color: $border-color !important;}
+
+    &:after {border-top-color: $arrow-color !important;}
+
+    @if $arrow-location == left {
+      @extend %arrow--left;
+    }
+
+    @if $arrow-location == center {
+      @extend %arrow--center;
+    }
+
+    @if $arrow-location == right {
+      @extend %arrow--right;
+    }
+
+  }
+
+  /* Left */
+  @if $arrow-edge == left {
+
+    @extend %arrow--near;
+
+    &:before {border-right-color: $border-color !important;}
+
+    &:after {border-right-color: $arrow-color !important;}
+
+    @if $arrow-location == top {
+      @extend %arrow--upper;
+    }
+
+    @if $arrow-location == center {
+      @extend %arrow--middle;
+    }
+
+    @if $arrow-location == bottom {
+      @extend %arrow--lower;
+    }
+
+  }
 
 }
 
