--- a/app/assets/stylesheets/partials/utils/placeholders/_box-shadows.scss
+++ b/app/assets/stylesheets/partials/utils/placeholders/_box-shadows.scss
@@ -37,14 +37,13 @@ $dir-box-shadow-color: rgba(#000, 0.4) !default;
 
 /* --Simple embossed box shadows-- */
 %box-shadow-embossed-light {
-    border: 1px solid rgba(0, 0, 0, 0.05);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.7);
 }
 
 %box-shadow-embossed-heavy {
-    border: 1px solid rgba(0, 0, 0, 0.05);
-    box-shadow:
-        inset 0 2px 3px rgba(255, 255, 255, 0.3),
-        inset 0 -2px 3px rgba(0, 0, 0, 0.3),
-        0 1px 1px rgba(255, 255, 255, 0.9);
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3),
+              inset 0 -2px 3px rgba(0, 0, 0, 0.3),
+              0 1px 1px rgba(255, 255, 255, 0.9);
 }
