--- a/app/assets/stylesheets/partials/utils/placeholders/_hide.scss
+++ b/app/assets/stylesheets/partials/utils/placeholders/_hide.scss
@@ -7,7 +7,8 @@
 		Hides elements in various ways.
 
 	Note:
-		Most of the time the relevant 'hide' helper classes (see: helpers/hide) will handle this.
+		- Most of the time the relevant 'hide' helper classes (see: helpers/hide) will handle this.
+    - Have to declare the styles in a `@mixin`, see the 'PLACEHOLDER SELECTOR MEDIA QUERY FIX' section in 'utils/mixins' for the explanation.
 */
 
 /* Hide only visually but have it available for screen readers */
