--- a/app/assets/stylesheets/partials/utils/placeholders/_new-block-formatting-context.scss
+++ b/app/assets/stylesheets/partials/utils/placeholders/_new-block-formatting-context.scss
@@ -4,7 +4,7 @@
 
 /*
   Usage:
-    Makes the container take up remaing space next to the floated element. Also prevents margin collapse
+    Makes the container take up remaining space next to the floated element, also prevents margin collapse.
 
   Demo:
     Style Guide -> Utilities -> New Block Formatting Context
