--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,7 +53,7 @@
         <%# //Store location %>
 
         <%# Contact store %>
-        <div class="island island--fill island--center islet-tops detail-view__divider">
+        <div class="island island--fill island--center islet-ends detail-view__divider">
           <span class="hide-fully--non-palm">
             <%= phone_link @product.retail_chain.phone_no, class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
               <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @product.retail_chain_name %></strong>
