--- a/app/assets/stylesheets/partials/layout/grid/_widths.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_widths.scss
@@ -107,9 +107,9 @@
 }
 
 /* Lap large */
-/*@include respond-range-fixed(lap-lrg) {
+@include respond-range-fixed(lap-lrg) {
   @include width-classes("lap-lrg-");
-}*/
+}
 
 /* Portable */
 /*@include respond-max($lap-end) {
@@ -117,9 +117,9 @@
 }*/
 
 /* Desk */
-/*@include respond-min($desk) {
+@include respond-min($desk) {
   @include width-classes("desk-");
-}*/
+}
 
 /* Desk small */
 /*@include respond-range-fixed(desk-sml) {
